# AutoProf

./: .gitignore  AI.txt  Cargo.toml  README.md  agents.rs  main.rs  parser.rs  rustfmt.toml
agents/: globals.rs  helpers.rs  interface.rs
benches/: parser_benchmark.rs
parser/: globals.rs  helpers.rs  interface.rs  profile_parsing.rs  types.rs
rewriter/: interface.rs
tests/: constants.rs  helpers.rs  validation.rs
