[package]
name = "gocortex"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11"
once_cell = "1.21.3"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "parser_benchmark"
harness = false

[profile.release]
debug = true

[lib]
name = "gocortex"
path = "lib.rs"

[[bin]]
name = "gocortex"
path = "main.rs"
