[package]
name = "gocortex"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11"
once_cell = "1.21.3"
tiktoken-rs = "0.7.0"
openai = "1.1.1"
tokio = { version = "1.46.0", features = ["full"] }
dotenvy = "0.15.7"

[dev-dependencies]
criterion = "0.6.0"

[profile.release]
debug = true

[lib]
name = "gocortex"
path = "lib.rs"

[[bin]]
name = "gocortex"
path = "main.rs"
